// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IncomeField/> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <input
        class="sc-iqAbSa fdLqwF"
        id="testId"
        name="income"
        placeholder="Dochód"
        type="text"
        value="1234567890a"
      />
      <span
        class="sc-kEqYlL lmrtkS"
      >
        Podana kwota jest nieprawidłowa
      </span>
    </div>
  </form>
</div>
`;

exports[`<IncomeField/> matches snapshot 1`] = `
<input
  class="sc-iqAbSa jrHUfY"
  id="testId"
  name="income"
  placeholder="Dochód"
  type="text"
  value=""
/>
`;

exports[`<IncomeField/> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="income"
      >
        Income*
      </label>
      <input
        class="sc-iqAbSa fdLqwF"
        id="testId"
        label="Income"
        name="income"
        placeholder="Dochód*"
        required=""
        type="text"
        value=""
      />
      <span
        class="sc-kEqYlL lmrtkS"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<IncomeField/> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="income"
      >
        Income
      </label>
      <input
        class="sc-iqAbSa jrHUfY"
        id="testId"
        label="Income"
        name="income"
        placeholder="Dochód"
        type="text"
        value=""
      />
    </div>
  </form>
</div>
`;
